--- a/virtualization/xen-4.1/debian/changelog
+++ b/virtualization/xen-4.1/debian/changelog
@@ -5,6 +5,7 @@ xen-4.1 (4.1.3-14) unstable; urgency=low
     - Lock order reversal between page_alloc_lock and mm_rwlock (CVE-2013-4553)
     - Information leaks through I/O instruction emulation (CVE-2013-4355)
     - Information leak through fbld instruction emulation (CVE-2013-4361)
+    - Lock order reversal between page allocation and grant table locks (CVE-2013-4494)	
 
  -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Tue, 14 Jan 2014 10:53:19 +0100
 
