--- a/virtualization/xen-4.1/debian/changelog
+++ b/virtualization/xen-4.1/debian/changelog
@@ -1,3 +1,20 @@
+xen-4.1 (4.1.3-16) unstable; urgency=medium
+
+  * Fix multiple security issues: (Bug #34115)
+    - Information leak through outs instruction emulation CVE-2013-4368
+    - use-after-free in xc_cpupool_getinfo() (CVE-2014-1950)
+    - Denial of service in HVMOP_set_mem_access() (CVE-2014-2599)
+    - Denial of service in HVMOP_set_mem_type() (CVE-2014-3124)
+    - Hypervisor heap contents leaked to guests (CVE-2014-4021)
+    - Denial of service in HVMOP_track_dirty_vram() (CVE-2014-7154)
+    - Missing privilege level checks in x86 HLT, LGDT, LIDT, and LMSW
+      emulation (CVE-2014-7155)
+    - Missing privilege level checks in x86 emulation of software
+      interrupts (CVE-2014-7156)
+    - Improper MSR range used for x2APIC emulation (CVE-2014-7188)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 10 Oct 2014 16:37:27 +0200
+
 xen-4.1 (4.1.3-15) unstable; urgency=low
 
   * Bug #35488 qemu-dm: Suppress "unregistered DMA channel" message.
